# cmd/api/api.go
@@ -81,6 +81,10 @@ func (app *application) mount() *chi.Mux {
 				r.Get("/feed", app.getFeedHandler)
 			})
 		})
+
+		r.Route("/authentication", func(r chi.Router) {
+			r.Post("/user", app.registerUserHandler)
+		})
 	})
 	return r
 }
